--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.1",
+    "resend": "^4.5.1",
     "stripe": "^17.7.0",
     "zod": "^3.24.2"
   }
