--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch:schema": "nodemon --watch prisma/schema.prisma --exec \"npx prisma migrate dev --name auto\""
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
